'fixed' import ui bug

--- a/application/views/scripts/import/analyze.phtml
+++ b/application/views/scripts/import/analyze.phtml
@@ -124,7 +124,7 @@ function doImport() {
                         setState('OtC-' + this.key,this.result);
                         lastKey = this.key;
                     });
-                    scrollToId('OtC-' + lastKey);
+                    //scrollToId('OtC-' + lastKey);
                     calcDone();
                     doImport();
                 } else {
